RESOLVED FIXED259335
REGRESSION(265525@main): leading to single test failure while progressing few and closing three old bugs
https://bugs.webkit.org/show_bug.cgi?id=259335
Summary REGRESSION(265525@main): leading to single test failure while progressing few...
WebKit Commit Bot
Reported 2023-07-19 03:33:38 PDT
https://commits.webkit.org/265525@main introduced a regression: leading to single test failure while progressing few and closing three old bugs This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 265525@main (69.56 KB, patch)
2023-07-19 03:33 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-07-19 03:33:46 PDT
Created attachment 467073 [details] REVERT of 265525@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2023-07-19 03:38:05 PDT
Committed 266158@main (f48ac0a4ce0b): <https://commits.webkit.org/266158@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467073 [details].
Radar WebKit Bug Importer
Comment 3 2023-07-19 03:39:24 PDT
Note You need to log in before you can comment on or make changes to this bug.