Cherry-pick f48ac0a4ce0b. rdar://problem/112420119

Unreviewed, reverting 265525@main.
    https://bugs.webkit.org/show_bug.cgi?id=259335

    leading to single test failure while progressing few and closing three old bugs

    Reverted changeset:

    "dominant-baseline property should be inherited"
    https://bugs.webkit.org/show_bug.cgi?id=139258
    https://commits.webkit.org/265525@main

    Canonical link: https://commits.webkit.org/266158@main

Identifier: 265870.202@safari-7616-branch